<resources>
    <string name="app_name">autoterminalemployee</string>
    <string name="passInici">Password</string>
    <string name="UsuInici">User</string>
    <string name="Enter">Enter</string>
    <string name="ForgetPass">Have you forgotten the password?</string>
    <string name="AddCar">Add Car</string>
    <string name="LocateCar">Locate Car</string>
    <string name="ReportIncidence">Report incidence</string>
    <string name="SerialNumber">Serial number car</string>
    <string name="SerialNumber2">Serial number device</string>
    <string name="ConfirmAdd">Confirm add</string>
    <string name="SuggestDelete">Suggest delete</string>
    <string name="Scan">Scan</string>
    <string name="Search">Search</string>
    <string name="CarInf">Car information</string>
    <string name="Colour">Colour</string>
    <string name="Model">Model</string>
    <string name="Brand">Brand</string>
    <string name="Features">Features</string>
    <string name="NumberPlace">Number of place</string>
    <string name="Floor">Floor</string>
    <string name="Flat">Flat</string>
    <string name="Map">Map</string>
    <string name="Historial">Employee tasks</string>
    <string name="Route">Route</string>
    <string name="PrepareLogin">Preparing for autenticate</string>
    <string name="PutNumber">Please, put serial number</string>
    <string name="OkNumber">Number introduced</string>
    <string name="RemoveCar">Remove car</string>
    <string name="ConfirmRemove">Confirm remove</string>
    <string name="EntryDate">Entry date</string>
    <string name="DepartureDate">Departure date</string>
    <string name="ErrorAutentication">Put correct data</string>
    <string name="DeletedCar">Deleted car</string>
    <string name="UpdateFailed">Update failed</string>
    <string name="AddedCar">Added car</string>
    <string name="Place">Place</string>
    <string name="LogIn">Log In</string>
    <string name="Row">Row</string>
    <string name="Column">Column</string>
    <string name="IncorrectNumber">Vehicle not found from database</string>
</resources>
